--- a/style/default.css
+++ b/style/default.css
@@ -8,6 +8,13 @@ h6 {
   font-family: "Montserrat", sans-serif
 }
 
+a {
+  color: #FFFF;
+  /* Herda a cor do elemento pai */
+  text-decoration: none;
+  /* Remove o sublinhado */
+}
+
 /* h5 {
   color: #FFFF;
 } */
@@ -23,9 +30,42 @@ h6 {
 }
 
 /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-/* #main {
-      margin-left: 120px
-    } */
+#main {
+  margin-left: 120px
+}
+
+/* Carousel e cards */
+.cards-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.card img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card {
+  margin: 0 0.5em;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  border: none;
+  border-radius: 0;
+}
+
+.carousel-inner {
+  padding: 1em;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  background-color: #e1e1e1;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 50%;
+  transform: translateY(-50%);
+}
+
+/* Carousel e cards */
 
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {
